--- a/blogs.html
+++ b/blogs.html
@@ -2,37 +2,29 @@
 <html lang="en">
   <head>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BG7MB85VSL"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7JKMM0K4KD"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-BG7MB85VSL');
-    </script>
+    gtag('config', 'G-7JKMM0K4KD');
+    </script> 
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- Twitter Card Section -->
-
-    <meta property="og:title" content="Siyam Afroz - A minimal portfolio">
-    <meta property="og:description" content="Hi! Wanna know about me? :D">
+    <meta property="og:title" content="Aman Shaikh">
+    <meta property="og:description" content="Hello! Interested in learning more about me?">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://siyamafroz.me/">
-    <meta property="og:site_name" content="Siyam Afroz">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Siyam Afroz">
-    <meta name="twitter:description" content="Hi! Wanna know about me?">
-    <meta name="twitter:image" content="https://siyamafroz.me/images/embed.png">
-    <meta name="theme-color" content="#3b3b3b">
+    <meta property="og:url" content="https://m4xy.org/">
+    <meta property="og:site_name" content="Aman Shaikh">
+    <meta name="theme-color" content="#00FFFF"> 
 
 
     <!--  -->
 
 
-    <title>Siyam Afroz</title>
-    <!-- <link rel="icon" type="image/x-icon" href="images/logo.png" />  -->
+    <title>Aman Shaikh</title>
     <link rel="stylesheet" href="/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -172,7 +164,7 @@
 
     </main>
     <footer>
-        <small>© 2024 Siyam Afroz</small>
+        <small>© 2024 Aman Shaikh - m4xy07</small>
     </footer>
 
     <script src="/app.js"></script>
