--- a/index.html
+++ b/index.html
@@ -2,50 +2,35 @@
 <html lang="en">
   <head>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BG7MB85VSL"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7JKMM0K4KD"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-BG7MB85VSL');
-    </script>
+    gtag('config', 'G-7JKMM0K4KD');
+    </script> 
 
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- Twitter Card Section -->
-
-    <meta property="og:title" content="Siyam Afroz - A minimal portfolio">
-    <meta property="og:description" content="Hi! Wanna know about me? :D">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://siyamafroz.me/">
-    <meta property="og:site_name" content="Siyam Afroz">
-    <meta property="og:image" content="https://siyamafroz.me/images/embed.png">
-
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Siyam Afroz">
-    <meta name="twitter:url" content="https://siyamafroz.me/">
-    <meta name="twitter:domain" content="siyamafroz.me">
-    <meta name ="twitter:site" content="@soren_blank">
-    <meta name="twitter:description" content="Hi! Wanna know about me?">
-    <meta name="twitter:image" content="https://siyamafroz.me/images/embed.png">
-    <meta name="theme-color" content="#ffffff">
-    <meta name="next-head-count" content="15">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta property="og:title" content="Aman Shaikh">
+<meta property="og:description" content="Hello! Interested in learning more about me?">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://m4xy.org/">
+<meta property="og:site_name" content="Aman Shaikh">
+<meta name="theme-color" content="#00FFFF"> 
 
 
-    <!--  -->
+<!--  -->
 
 
-    <title>Siyam Afroz</title>
-    <!-- <link rel="icon" type="image/x-icon" href="images/logo.png" />  -->
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
-
+<title>Aman Shaikh</title>
+<link rel="stylesheet" href="/styles.css" />
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
 
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
@@ -71,11 +56,11 @@
 
             <div class="domain">
                 <header>
-                    <h1>Hi! I'm Siyam Afroz.</h1>
+                    <h1>👋 Hi! I'm Aman Shaikh.</h1>
 
                     <div class="caption">
-                        <p>I am also known by Soren (Blank) on the Internet. I like exploring creative works and take inspiration from them. I like doing many things. And I will try to feature some of them on this site ✨</p>
-                        <p>I am also working on my own <a class="an" href="projects.html">projects</a>, sharing my thoughts and documenting my life on my <a class="an" href="blogs.html">blog</a>.</p>
+                        <p>I'm an undergraduate student pursuing B.Tech in Computer Science and Engineering.</p>
+                        <p>I like working on my <a class="an" href="projects.html">projects</a>, and watching <a class="an" href="https://myanimelist.net/profile/m4xy07">anime or reading manhwa/manga</a>in my free time.</p>
                         <a href="contact.html"><button class="minimal">Get in touch →</button></a>
                     </div>
                 </header>
