--- a/index.html
+++ b/index.html
@@ -236,23 +236,22 @@
     <section class="section-form">
             
         <form action="submitted.html" method="POST" data-netlify="true" name="contact">
-            <h2>Get in touch?</h2>
-            <p>Feel free to reach out if you're looking for a developer, have a question, or just want to connect.</p>
+            <h2>Contact Me</h2>
+            <p>If you have any inquiries or would like to get in touch, please fill out the form below.</p>
             <input type="text" name="Name" placeholder="Full Name" required/>
             <input type="email" name="Email" placeholder="Email" required/>
 
-            
             <div class="submit">
                 <textarea name="Message" placeholder="Message" required></textarea>
                 <button type="submit">Submit</button>
             </div>
-            </a>
+
         </form>
 
     </section>
 
     <footer>
-        <small>© 2024 Siyam Afroz</small>
+        <small>© 2024 Aman Shaikh - m4xy07</small>
     </footer>
 
     <script src="app.js"></script>
